--- a/TeduWeb.Application/TeduWeb.Application.csproj
+++ b/TeduWeb.Application/TeduWeb.Application.csproj
@@ -4,4 +4,17 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+    <Folder Include="Implementations\" />
+    <Folder Include="AutoMapper\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TeduWeb.Data.EF\TeduWeb.Data.EF.csproj" />
+    <ProjectReference Include="..\TeduWeb.Data\TeduWeb.Data.csproj" />
+    <ProjectReference Include="..\TeduWeb.Utilities\TeduWeb.Utilities.csproj" />
+  </ItemGroup>
+
 </Project>
